--- a/opensaas-sh/blog/src/content/docs/guides/file-uploading.mdx
+++ b/opensaas-sh/blog/src/content/docs/guides/file-uploading.mdx
@@ -143,6 +143,116 @@ To begin customizing file uploads, is important to know where everything lives i
   - The `getAllFilesByUser` fetches all File information uploaded by the user. Note that the files do not exist in the app database, but rather the file data, its name and its `key`, which is used to fetch the file from S3.
   - The `getDownloadFileSignedURL` query fetches the presigned URL for a file to be downloaded from S3 using the file's `key` stored in the app's database.
 
+### Cleaning up "orphaned" files in S3
+
+In the current logic, files are first deleted from the app's database before attempting to delete them from S3. If, for some reason, the S3 deletion were to fail, the file would remain in S3 and not in the app's database and be orphaned:
+
+```ts
+// src/file-upload/operations.ts
+export const deleteFile: DeleteFile<DeleteFileInput, File> = async (args, context) => {
+
+  const deletedFile = await context.entities.File.delete(args.fileId);
+
+  try {
+    return await deleteFileFromS3({ s3Key: deletedFile.s3Key });
+  } catch (error) {
+    console.error(`S3 deletion failed. Orphaned file s3Key: ${deletedFile.s3Key}`, error);
+  }
+};
+```
+
+To clean up these orphaned files, you could add a cleanup job that runs at an interval of your choosing to:
+
+1. Fetch all file keys from S3
+2. Fetch all file keys from the app's database
+3. Compare the two lists and delete any files from S3 that are not in the database
+
+Here's an example of how you could implement this:
+
+```ts
+// .wasp config file
+job cleanUpOrphanedFilesS3Job {
+  executor: PgBoss,
+  perform: {
+    fn: import { cleanUpOrphanedFilesS3 } from "@src/file-upload/workers"
+  },
+  schedule: {
+    cron: "0 5 * * 0" // every week on Sunday at 5am
+  },
+  entities: [File]
+}
+```
+
+```ts
+// src/file-upload/workers.ts
+
+import type { CleanUpOrphanedFilesS3Job } from 'wasp/server/jobs';
+import { s3Client, deleteFileFromS3 } from './s3Utils';
+import { ListObjectsV2Command, ListObjectsV2CommandOutput } from '@aws-sdk/client-s3';
+
+export const cleanUpOrphanedFilesS3: CleanUpOrphanedFilesS3Job<never, void> = async (
+  _args,
+  context
+) => {
+  const allFileKeysFromS3 = await fetchAllFileKeysFromS3();
+  const allFileKeysFromDb = await context.entities.File.findMany({
+    select: { s3Key: true },
+  });
+  await findAndDeleteOrphanedFilesInS3(allFileKeysFromS3, allFileKeysFromDb);
+};
+
+const fetchAllFileKeysFromS3 = async () => {
+  const allS3Keys: string[] = [];
+  let continuationToken: string | undefined = undefined;
+
+  do {
+    const command = new ListObjectsV2Command({
+      Bucket: process.env.AWS_S3_FILES_BUCKET,
+      ContinuationToken: continuationToken,
+    });
+
+    const response: ListObjectsV2CommandOutput = await s3Client.send(command);
+
+    if (response.Contents) {
+      const keys = response.Contents.reduce((acc: string[], object) => {
+        if (object.Key) {
+          acc.push(object.Key);
+        }
+        return acc;
+      }, []);
+      allS3Keys.push(...keys);
+    }
+
+    continuationToken = response.NextContinuationToken;
+  } while (continuationToken);
+
+  console.log(`Found ${allS3Keys.length} total files in S3`);
+
+  return allS3Keys;
+};
+
+const findAndDeleteOrphanedFilesInS3 = async (
+  allFileKeysFromS3: string[],
+  allFileKeysFromDb: { s3Key: string }[]
+) => {
+  const s3KeysNotFoundInDb = allFileKeysFromS3.filter(
+    (s3Key) => !allFileKeysFromDb.some((file) => file.s3Key === s3Key)
+  );
+
+  // Delete files from S3 that are not in the database
+  // If any file deletion fails, the job can continue and pick it up next run.
+  const s3DeletionResults = await Promise.allSettled(
+    s3KeysNotFoundInDb.map((s3Key) => deleteFileFromS3({ s3Key }))
+  );
+
+  const successfulDeletions = s3DeletionResults.filter((result) => result.status === 'fulfilled');
+
+  console.log(
+    `Successfully deleted ${successfulDeletions.length} out of ${s3KeysNotFoundInDb.length} orphaned files from S3`
+  );
+};
+```
+
 ## Using Multer to upload files to your server
 
 If you're looking to upload files to the app server, you can use the Multer middleware to handle file uploads. This will allow you to store files on your server and is a good option if you need a quick and dirty, free solution for simple file uploads.
