Apply suggestion from @infomiho
Co-authored-by: Mihovil Ilakovac <mihovil@ilakovac.com>

--- a/opensaas-sh/blog/src/content/docs/guides/payments-integration.mdx
+++ b/opensaas-sh/blog/src/content/docs/guides/payments-integration.mdx
@@ -95,7 +95,7 @@ To create a test product, go to the test products url [https://dashboard.stripe.
 
 ### Create a Test Customer
 
-You can create a test customer directly in the [Stripe Dashboard](https://dashboard.stripe.com/test/customers).
+You can create a test customer in the [Stripe Dashboard](https://dashboard.stripe.com/test/customers).
 
 - Click on the `Add a customer` button and fill in the relevant information for your test customer.
 
